--- a/vm/.config
+++ b/vm/.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Picobit Virtual Machine Configuration
-# Thu Aug 25 23:06:36 2011
+# Thu Oct 20 10:41:49 2016
 #
 CONFIG_ARCH_HOST=y
 # CONFIG_ARCH_ARM is not set
@@ -9,8 +9,8 @@ CONFIG_ERROR_HANDLING=y
 CONFIG_DEBUG_STRINGS=y
 CONFIG_ARCH_32BIT=y
 CONFIG_ARCH="host"
-# CONFIG_BIGNUM_FIXED is not set
-CONFIG_BIGNUM_LONG=y
+CONFIG_BIGNUM_FIXED=y
+# CONFIG_BIGNUM_LONG is not set
 # CONFIG_VM_DEBUG is not set
 # CONFIG_GC_STATISTICS is not set
 # CONFIG_GC_DEBUG is not set
