--- a/vm/.config
+++ b/vm/.config
@@ -1,16 +1,15 @@
 #
 # Automatically generated make config: don't edit
 # Picobit Virtual Machine Configuration
-# Mon Sep 12 11:28:14 2011
+# Thu Nov 17 07:54:19 2016
 #
 # CONFIG_ARCH_HOST is not set
 CONFIG_ARCH_ARM=y
 CONFIG_ARCH_32BIT=y
 CONFIG_ARCH="arm"
 CONFIG_CROSS_COMPILER="arm-none-eabi-"
-CONFIG_ARM_CORTEX_M3=y
+CONFIG_CMSIS_ARM_CORTEX_M3=y
 CONFIG_ARM_COMPILER_GCC=y
-# CONFIG_ARM_COMPILER_KEIL is not set
 CONFIG_ARM_CPU_STM32F100RB=y
 CONFIG_ARM_BOARD_STM32_VLDISCOVERY=y
 # CONFIG_BIGNUM_FIXED is not set
