--- a/vm/arch/arm/Makefile
+++ b/vm/arch/arm/Makefile
@@ -2,4 +2,8 @@ ifdef CONFIG_ARM_CORTEX_M3
 arch := $(arch)/cortex-m3
 endif
 
+ifdef CONFIG_CMSIS_ARM_CORTEX_M3
+arch := $(arch)/cortex-m3-CMSIS
+endif
+
 include $(arch)/Makefile
