--- a/vm/.config
+++ b/vm/.config
@@ -1,14 +1,16 @@
 #
 # Automatically generated make config: don't edit
 # Picobit Virtual Machine Configuration
-# Thu Aug 25 23:06:36 2011
+# Fri Jan 13 14:44:35 2017
 #
-CONFIG_ARCH_HOST=y
-# CONFIG_ARCH_ARM is not set
-CONFIG_ERROR_HANDLING=y
-CONFIG_DEBUG_STRINGS=y
+# CONFIG_ARCH_HOST is not set
+CONFIG_ARCH_ARM=y
 CONFIG_ARCH_32BIT=y
-CONFIG_ARCH="host"
+CONFIG_ARCH="arm"
+CONFIG_CROSS_COMPILER="arm-none-eabi-"
+CONFIG_ARM_CORTEX_M3=y
+CONFIG_ARM_CPU_STM32F100RB=y
+CONFIG_ARM_BOARD_STM32_VLDISCOVERY=y
 # CONFIG_BIGNUM_FIXED is not set
 CONFIG_BIGNUM_LONG=y
 # CONFIG_VM_DEBUG is not set
