--- a/vm/.config
+++ b/vm/.config
@@ -1,17 +1,15 @@
 #
 # Automatically generated make config: don't edit
 # Picobit Virtual Machine Configuration
-# Mon Nov 28 15:24:03 2016
+# Fri Jan 20 10:41:45 2017
 #
 # CONFIG_ARCH_HOST is not set
 CONFIG_ARCH_ARM=y
 CONFIG_ARCH_32BIT=y
 CONFIG_ARCH="arm"
 CONFIG_CROSS_COMPILER="arm-none-eabi-"
+# CONFIG_HAL_ARM_CORTEX_M3 is not set
 CONFIG_CMSIS_ARM_CORTEX_M3=y
-CONFIG_ARM_COMPILER_GCC=y
-CONFIG_ARM_CPU_STM32F100RB=y
-CONFIG_ARM_BOARD_STM32_VLDISCOVERY=y
 # CONFIG_BIGNUM_FIXED is not set
 CONFIG_BIGNUM_LONG=y
 # CONFIG_VM_DEBUG is not set
