--- a/vm/arch/arm/Makefile
+++ b/vm/arch/arm/Makefile
@@ -6,4 +6,8 @@ ifdef CONFIG_CMSIS_ARM_CORTEX_M3
 arch := $(arch)/cortex-m3-CMSIS
 endif
 
+ifdef CONFIG_HAL_ARM_CORTEX_M3
+arch := $(arch)/cortex-m3-HAL
+endif
+
 include $(arch)/Makefile
