--- a/vm/.config
+++ b/vm/.config
@@ -1,13 +1,13 @@
 #
 # Automatically generated make config: don't edit
 # Picobit Virtual Machine Configuration
-# Thu Mar  2 11:22:16 2017
+# Fri Mar 17 16:38:44 2017
 #
 # CONFIG_ARCH_HOST is not set
 CONFIG_ARCH_ARM=y
 CONFIG_ARCH_32BIT=y
 CONFIG_ARCH="arm"
-CONFIG_CROSS_COMPILER="arm-none-eabi-"
+CONFIG_CROSS_COMPILER="~/gcc/bin/arm-none-eabi-"
 # CONFIG_ARM_CORTEX_M3 is not set
 # CONFIG_CMSIS_ARM_CORTEX_M3 is not set
 CONFIG_HAL_ARM_CORTEX_M3=y
