--- a/vm/.config
+++ b/vm/.config
@@ -1,19 +1,14 @@
 #
 # Automatically generated make config: don't edit
 # Picobit Virtual Machine Configuration
-# Sun Mar 19 10:16:49 2017
+# Sun Jun  4 10:25:46 2017
 #
-# CONFIG_ARCH_HOST is not set
-CONFIG_ARCH_ARM=y
+CONFIG_ARCH_HOST=y
+# CONFIG_ARCH_ARM is not set
+CONFIG_ERROR_HANDLING=y
+CONFIG_DEBUG_STRINGS=y
 CONFIG_ARCH_32BIT=y
-CONFIG_ARCH="arm"
-CONFIG_CROSS_COMPILER="~/gcc/bin/arm-none-eabi-"
-# CONFIG_ARM_CORTEX_M3 is not set
-# CONFIG_CMSIS_ARM_CORTEX_M3 is not set
-CONFIG_HAL_ARM_CORTEX_M3=y
-CONFIG_ARM_COMPILER_GCC=y
-CONFIG_ARM_CPU_STM32F100RB=y
-CONFIG_ARM_BOARD_STM32_VLDISCOVERY=y
+CONFIG_ARCH="host"
 # CONFIG_BIGNUM_FIXED is not set
 CONFIG_BIGNUM_LONG=y
 # CONFIG_VM_DEBUG is not set
